css/style.css
html{
    scroll-behavior: smooth;
}

body,
html {
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    background: #fff;
    scroll-behavior: smooth;
}

body a,
.btn,
button {
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
    text-decoration: none;
    outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    letter-spacing: 1px;
}

p {
    margin: 0;
    color: #000;
    font-weight: 500;
    font-size: 1em;
    line-height: 1.9em;
    letter-spacing: 1px;
}
.nav-item .nav-link{
   color:#eb8100 !important; 
}

.navbar-brand{
    margin:auto;
}

.btn-outline-theme2:hover {
    color: #d91284;
    border-color: #d91284;
    background-color: #fff;
}

.btn-outline-theme2 {
    color: #fff;
    background-color: #d91284;
    border-color: #fff;
}

.nav-button{
    display:flex !important;
    justify-content: flex-end;
    flex-grow: 1;
    flex-flow: row nowrap;
    margin-right: 5vw;
}

.nav-contact{
    opacity:0.5;
}

.headerdown {
    background-color:#d91284;
}

.sticky-top{
    position:initial;
}

@media (min-width: 768px){
    .headerdown{
        height: 70px;
    }
    
    .sticky-top{
        position:sticky;
        top :0;
        z-index: 1000;
    }
    
}

.at_l {
    float: left;
    width: 10%;
}

.at_r {
    float: right;
    width: 90%;
    padding-left:2vw;
}

.at_hl {
    margin-top: 15px;
}

.at_r h3 {
    font-size: 18px;
    color: #fff;
    letter-spacing: 2px;
    font-weight: 600;
    margin-bottom: 1px;
}

.at_r h5 {
    font-size: 13px;
    color: #fff;
    letter-spacing: 1px;
    font-weight: 600;
    margin-bottom: 1px;
}

.at_l i {
    font-size: 30px;
	    color: #fff;
}

.at_cl {
    float: left;
    width: 10%;
}
.at_cr {
    float: left;
    width: 90%;
    padding-left:2vw;
}
.at_rl {
    float: left;
    width: 10%;
}
.at_rr {
    float: left;
    width: 90%;
    padding-left:2vw;
}

.at_hl {
    margin-top: 15px;
}
.at_hc {
    margin-top: 15px;
}
.at_hr {
    margin-top: 15px;
}
.at_l i {
    font-size: 30px;
	    color: #fff;
}
.at_cl i {
    font-size: 30px;
	    color: #fff;
}
.at_rl i {
    font-size: 30px;
	    color: #fff;
}
.at_r h3 {
    font-size: 14px;
    color: #fff;
    letter-spacing: 2px;
    margin-bottom: 1px;
}
.at_cr h3 {
    font-size: 14px;
    color: #fff;
    letter-spacing: 2px;
    margin-bottom: 1px;
}
.at_rr h3 {
    font-size: 14px;
    color: #fff;
    letter-spacing: 2px;
    margin-bottom: 1px;
}
.at_r h5 {
    font-size: 10px;
    color: #fff;
    letter-spacing: 1px;
    font-weight: 600;
    margin-bottom: 1px;
}
.at_cr h5 {
    font-size: 10px;
    color: #fff;
    letter-spacing: 1px;
    font-weight: 600;
    margin-bottom: 1px;
}
.at_rr h5 {
    font-size: 10px;
    color: #fff;
    letter-spacing: 1px;
    font-weight: 600;
    margin-bottom: 1px;
}

i.fa.fa-search {
    margin-right: 45px;
}

.row{
    margin: auto;
}

@media (min-width: 992px){
    .navbar-expand-lg .navbar-collapse{
        display:flex;
        justify-content:flex-end;
    }
    
}

.full-height{
    max-height: 90vh;
}

.carousel-caption{
    bottom:10%;
    background-color: #212529;
    opacity: 0.8;
    padding: 5px;
    left:20%;
    right:20%;
}

.carousel-caption h5{
    font-size: 1rem;
    color:#fff;  
}

.carousel-caption p{
    font-size:0.5rem;
    color:#eb8100;  
}

.banner-1{
    background: url(../images/consult.JPG) no-repeat center;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
}

@media (min-width: 992px){
    
.carousel-caption{
    bottom:10%;
    background-color: #212529;
    opacity: 0.8;
    padding: 10px;
    left:15%;
    right:15%;
}

    .carousel-caption h5{
    font-size: 3rem;
    color:#fff;  
}

.carousel-caption p{
    font-size:1rem;
    color:#eb8100;  
}
    
.at_r h3 {
    font-size: 16px;
    letter-spacing: 2px;
    font-weight: 600;
    
}
.at_cr h3 {
    font-size: 16px;
    letter-spacing: 2px;
    font-weight: 600;
    
}
.at_rr h3 {
    font-size: 16px;
    letter-spacing: 2px;
    font-weight: 600;
  }
    
.at_r h5 {
    font-size: 13px;
    font-weight: 600;
    
}
.at_cr h5 {
    font-size: 13px;
    font-weight: 600;
    
}
.at_rr h5 {
    font-size: 13px;
    font-weight: 600;
}



}

/*-- about --*/

.about{
   background-attachment: fixed;
    background: url(../images/buddha.jpg) no-repeat center 0px fixed ;
    background-size: cover;
}

h3.heading {
    font-size: 40px;
    letter-spacing: 2px;
    font-weight: 600;
    color:gold;
}
p.about-text {
    width: 80%;
    color:beige;
}

.mt-4 {
    color:gold;
}

.mt-3 {
    color:beige;
}

.about .container{
    background: rgba(0,0,0,0.1);
}
.feature-grids .f-icon {
    vertical-align: middle;
    background: #eb8100;
    width: 70px;
    height: 70px;
    line-height: 70px;
    margin: 0.5em auto 0;
    border-radius: 50%;
}
.feature-grids span.fa {
    color: #fff;
    font-size: 20px;
    line-height: 70px;
}
.feature-grids h3 {
    font-size: 22px;
    font-weight: 600;
    letter-spacing: 3px;
    line-height: 30px;
    text-transform: uppercase;
}
.feature-grids  p {
    letter-spacing: 1px;
}
/*-- //about --*/

/*-- services --*/
.mb-60 {
    margin-bottom: 60px;
}
.services-inner {
    border: 2px solid #445c6e;
    transition: .3s;
    border-radius: 4px;
	border-radius: 4px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -o-border-radius: 4px;
    -ms-border-radius: 4px;
}
.our-services-icon {
    margin-top: -28px;
}
/* ... */

